--- a/SMTL/app/src/main/res/layout/activity_login.xml
+++ b/SMTL/app/src/main/res/layout/activity_login.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".UserAreaActivity">
+    tools:context=".order.OrderActivity">
 
     <EditText
         android:id="@+id/user_email"
@@ -53,4 +53,11 @@
         android:id="@+id/tvRegisterLink"
         android:layout_below="@+id/bSignIn"
         android:layout_centerHorizontal="true" />
+
+    <Button
+        android:id="@+id/btnChart"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/tvRegisterLink"
+        android:text="차트" />
 </RelativeLayout>
