--- a/SMTL/app/src/main/res/layout/activity_login.xml
+++ b/SMTL/app/src/main/res/layout/activity_login.xml
@@ -1,63 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".order.OrderActivity">
-
+    android:orientation="vertical"
+    android:paddingLeft="20dp"
+    android:paddingRight="20dp"
+    android:paddingTop="50dp">
     <EditText
         android:id="@+id/user_email"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:ems="10"
-        android:hint="E-mail" />
-
+        android:layout_gravity="center_horizontal"
+        android:paddingTop="15dp"
+        android:drawableLeft="@drawable/ic_login_email"
+        android:hint="  E-mail address"
+        android:singleLine="true"
+        android:ems="30"/>
     <EditText
         android:id="@+id/user_password"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/user_email"
-        android:ems="10"
-        android:hint="Password"
-        android:inputType="textPassword" />
+        android:layout_gravity="center_horizontal"
+        android:paddingTop="15dp"
+        android:drawableLeft="@drawable/ic_login_password"
+        android:inputType="textPassword"
+        android:hint=" Password"
+        android:singleLine="true" />
 
     <Button
-        android:id="@+id/bSignIn"
-        android:layout_width="wrap_content"
+        android:id="@+id/btn_login"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/user_password"
-        android:text="로그인" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="회원가입"
-        android:id="@+id/tvRegisterLink"
-        android:layout_below="@+id/bSignIn"
-        android:layout_centerHorizontal="true" />
+        android:layout_gravity="center_horizontal"
+        android:text="login" />
 
     <Button
-        android:id="@+id/btnChart"
-        android:layout_width="wrap_content"
+        android:id="@+id/btn_sign_up"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/tvRegisterLink"
-        android:text="차트" />
-</RelativeLayout>
+        android:layout_gravity="center_horizontal"
+        android:text="sign up"/>
+
+</LinearLayout>
